--- a/LuxembourgViewer/LuxembourgViewer.vcxproj.filters
+++ b/LuxembourgViewer/LuxembourgViewer.vcxproj.filters
@@ -61,4 +61,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="LuxembourgMap.xml">
+      <Filter>Resource Files</Filter>
+    </Xml>
+  </ItemGroup>
 </Project>
